# VRM-Parser

./: .gitignore  CMakeLists.txt
Source/: main.cpp
Source/Core/: Camera.cpp  Camera.h  IApplication.cpp  IApplication.h  PrecompiledHeader.h  Shader.cpp  Shader.h
Source/InteractiveGeometry/: JointBall.cpp  JointBall.h
Source/InteractiveGeometry/Shaders/: JointBall.fsh  JointBall.vsh
Source/Model/: Model.cpp  Model.h  ModelDriver.cpp  ModelDriver.h  ModelUtilities.cpp  ModelUtilities.h  VrmModel.cpp  VrmModel.h
Source/Shaders/: Shader.fsh  Shader.vsh
